// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveComments Comments remain 1`] = `
<div>
  <span>3</span>
  <!---->
  <div>
    <!---->
    <span>2</span><!-- <div></div> -->
    <!--
     <div>
    </div>
   -->
    <div>
      <span>1</span>
      <!---->
      <!---->
    </div>
    <div>
      <div>
        <!--
        asdf asdf
       asdf
      -->
        <span>1</span>
        <!---->
        <!-- as as9-df df -->
        <!---->
        <!--asdf-->
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div></div>
</div>
<!---->
`;

exports[`RemoveComments Comments removed 1`] = `
<div>
  <span>3</span>
  <div>
    <span>2</span>
    <div>
      <span>1</span>
    </div>
    <div>
      <div>
        <span>1</span>
      </div>
    </div>
  </div>
  <div></div>
</div>
`;
